// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Store > palace > #getEntityById > returns the entity 1`] = `
{
  "builderBehavior": undefined,
  "composePhase": false,
  "meta": {
    "description": "Seu poder muscular. A Força é aplicada em testes de Atletismo e Luta; rolagens de dano corpo a corpo ou com armas de arremesso, e testes de Força para levantar peso e atos similares.",
    "pools": [
      "attribute",
    ],
    "title": "Força (FOR)",
  },
}
`;

exports[`Store > palace > exposes public API correctly 1`] = `
{
  "attributes": {
    "car": 0,
    "con": 0,
    "des": 0,
    "for": 0,
    "int": 0,
    "sab": 0,
  },
}
`;

exports[`Store > palace > exposes public API correctly 2`] = `
{
  "/aspect.attributes/": {
    "fields": [
      {
        "default": "points",
        "description": "Você pode definir seus atributos de três formas diferentes.

**Pontos:** Você começa com todos os atributos em 0 e recebe 10 pontos para comprar ou vender os atributos.

**Rolando:** Rolamos automaticamente os valores e você pode distribuir os valores nos atributos que quiser.

**Manual:** Preencha manualmente cada um dos campos.",
        "label": "Método de seleção",
        "options": [
          {
            "display": "Gastando pontos",
            "value": "points",
          },
          {
            "display": "Rolando dados",
            "value": "roll",
          },
          {
            "display": "Insersão Manual",
            "value": "manual",
          },
        ],
        "type": "combo",
      },
      {
        "attributes": {
          "attribute.car": "Carisma",
          "attribute.con": "Constituição",
          "attribute.des": "Destreza",
          "attribute.for": "Força",
          "attribute.int": "Inteligência",
          "attribute.sab": "Sabedoria",
        },
        "label": "Definindo Seus Atributos",
        "method": "points",
        "points": {
          "cost": {
            "-1": -1,
            "0": 0,
            "1": 1,
            "2": 2,
            "3": 4,
            "4": 7,
          },
          "label": "pontos",
          "maxValue": 4,
          "minValue": -1,
          "starting": 10,
        },
        "rolling": "{(4d6dl1-10)/2, {-2}}kh1",
        "type": "attributes",
      },
    ],
    "status": "warn",
  },
}
`;

exports[`Store > palace > setAnswer method=manual > changes the value of form 1`] = `
{
  "/aspect.attributes/": {
    "fields": [
      {
        "default": "points",
        "description": "Você pode definir seus atributos de três formas diferentes.

**Pontos:** Você começa com todos os atributos em 0 e recebe 10 pontos para comprar ou vender os atributos.

**Rolando:** Rolamos automaticamente os valores e você pode distribuir os valores nos atributos que quiser.

**Manual:** Preencha manualmente cada um dos campos.",
        "label": "Método de seleção",
        "options": [
          {
            "display": "Gastando pontos",
            "value": "points",
          },
          {
            "display": "Rolando dados",
            "value": "roll",
          },
          {
            "display": "Insersão Manual",
            "value": "manual",
          },
        ],
        "type": "combo",
      },
      {
        "attributes": {
          "attribute.car": "Carisma",
          "attribute.con": "Constituição",
          "attribute.des": "Destreza",
          "attribute.for": "Força",
          "attribute.int": "Inteligência",
          "attribute.sab": "Sabedoria",
        },
        "label": "Definindo Seus Atributos",
        "method": "manual",
        "points": {
          "cost": {
            "-1": -1,
            "0": 0,
            "1": 1,
            "2": 2,
            "3": 4,
            "4": 7,
          },
          "label": "pontos",
          "maxValue": 4,
          "minValue": -1,
          "starting": 10,
        },
        "rolling": "{(4d6dl1-10)/2, {-2}}kh1",
        "type": "attributes",
      },
    ],
    "status": "warn",
  },
}
`;

exports[`Store > palace > setAnswer method=manual > setAnswer attributes=obj > changes the value of sheet 1`] = `
{
  "attributes": {
    "car": 5,
    "con": 2,
    "des": 1,
    "for": 0,
    "int": 3,
    "sab": 4,
  },
}
`;
